[project]
name = "janus-web"
version = "0.0.1"
description = "API for janus-core"
authors = [
    { name = "Cameron Ball" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
]
readme = "README.md"

dependencies = [
    "janus-core",
    "fastapi<1.0.0,>=0.95.0",
    "uvicorn<1.0.0,>=0.22.0",
    "python-multipart",
    "fastapi-cors",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]

[project.scripts]

[project.urls]
repository = "https://github.com/stfc/janus-web/"
documentation = "https://stfc.github.io/janus-web/"

[dependency-groups]
dev = [
    "coverage[toml]<8.0.0,>=7.4.1",
    "pgtest<2.0.0,>=1.3.2",
    "pytest<9.0,>=8.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "tox-uv<2.0,>=1.16.1",
    "wheel<1.0,>=0.42",
]

docs = [
    "furo<2025.0.0,>=2024.1.29",
    "markupsafe<2.1",
    "numpydoc<2.0.0,>=1.6.0",
    "sphinx<8.0.0,>=7.2.6",
    "sphinxcontrib-contentui<1.0.0,>=0.2.5",
    "sphinxcontrib-details-directive<1.0,>=0.1",
    "sphinx-copybutton<1.0.0,>=0.5.2",
]

pre-commit = [
    "pre-commit<4.0.0,>=3.6.0",
    "ruff<1.0.0,>=0.7.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
# Configuration for pytest
python_files = "test_*.py"
addopts = '--cov-report xml'
pythonpath = ["."]

[tool.coverage.run]
# Configuration of coverage.py
# reporting which lines of your plugin are covered by tests
source=["janus_web"]

[tool.ruff]
exclude = ["conf.py"]
target-version = "py310"

[tool.ruff.lint]
# Ignore complexity
ignore = ["C901"]
select = [
    # flake8-bugbear
    "B",
    # pylint
    "C", "R",
    # pydocstyle
    "D",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F", "FA",
    # pyupgrade
    "I",
    # pep8-naming
    "N",
    # isort
    "UP",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.numpydoc_validation]
# report on all checks, except the below
checks = [
    "all",
    "EX01",
    "SA01",
    "ES01",
]
# Don't report on objects that match any of these regex
exclude = [
    ".__weakref__$",
    ".__repr__$",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "pre-commit",
]
